[gd_scene load_steps=20 format=3 uid="uid://f855sygoy2lw"]

[ext_resource type="Texture2D" uid="uid://cqu4jim0gxmhd" path="res://Resources/Textures/Image.svg" id="1_jekm8"]
[ext_resource type="Script" path="res://Scripts/ReplyCard.gd" id="1_jxnrt"]
[ext_resource type="FontFile" uid="uid://cfmxchqsorf7g" path="res://Resources/Fonts/SourceHanSansCN-Bold.otf" id="2_1befl"]
[ext_resource type="PackedScene" uid="uid://dvl2q2jkjjqbs" path="res://Scenes/WorkShopTag.tscn" id="3_74n4i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pfkb0"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4qr7g"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 28
corner_radius_top_right = 28
corner_radius_bottom_right = 28
corner_radius_bottom_left = 28

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_s3nx6"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ld7vq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gfgvk"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rrn1x"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ir2mv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rlye4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myyaj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8rwb2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_uwt5d"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_f7ted"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_77eby"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_myk3v"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a5rfu"]
bg_color = Color(0.821789, 0.821789, 0.821788, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="ReplyCard" type="PanelContainer"]
self_modulate = Color(1, 1, 1, 0.501961)
custom_minimum_size = Vector2(264, 0)
theme_override_styles/panel = SubResource("StyleBoxFlat_pfkb0")
script = ExtResource("1_jxnrt")

[node name="AvatarRequest" type="HTTPRequest" parent="."]
unique_name_in_owner = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Mask" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
clip_children = 1
custom_minimum_size = Vector2(56, 56)
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4qr7g")

[node name="AvatarTexture" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/Mask"]
unique_name_in_owner = true
layout_mode = 2
texture = ExtResource("1_jekm8")
expand_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = -3

[node name="NicknameLabel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_default_cursor_shape = 2
theme_override_colors/font_disabled_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_colors/font_hover_pressed_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_colors/font_hover_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_colors/font_pressed_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_colors/font_focus_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_fonts/font = ExtResource("2_1befl")
theme_override_font_sizes/font_size = 22
theme_override_styles/focus = SubResource("StyleBoxEmpty_s3nx6")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ld7vq")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_gfgvk")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_rrn1x")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_ir2mv")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_rlye4")
theme_override_styles/hover = SubResource("StyleBoxEmpty_myyaj")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_8rwb2")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_uwt5d")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_f7ted")
theme_override_styles/normal = SubResource("StyleBoxEmpty_77eby")
text = "Nickname"
flat = true
alignment = 0
text_overrun_behavior = 3

[node name="WorkShopTag" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer" instance=ExtResource("3_74n4i")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 0

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 0

[node name="IsTop" type="PanelContainer" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(0.43, 1, 0.449, 1)
custom_minimum_size = Vector2(8, 8)
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_myk3v")

[node name="ContentLabel" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.0627451, 0.0627451, 0.0627451, 1)
theme_override_constants/line_spacing = -4
text = "Content"
autowrap_mode = 2

[node name="CommentContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/CommentContainer"]
self_modulate = Color(1, 1, 1, 0.490196)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_a5rfu")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/CommentContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="CommentCardContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/CommentContainer/PanelContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2

[connection signal="gui_input" from="MarginContainer/VBoxContainer/HBoxContainer/Mask" to="." method="_on_avatar_texture_gui_input"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer/NicknameLabel" to="." method="_on_nickname_label_pressed"]
